[project]
name = "moshi-jp-playground"
version = "0.1.0"
description = "Playground repository for testing LLM-jp-Moshi-v1 locally with uv"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "moshi==0.2.2",
    "sphn==0.1.4",
]

[project.urls]
Repository = "https://github.com/kuwacom/Moshi-jp-Playground"
Upstream = "https://github.com/llm-jp/llm-jp-moshi"
Model = "https://huggingface.co/llm-jp/llm-jp-moshi-v1"

[tool.uv]
package = false

[tool.uv.sources]
moshi = { path = "vendor/moshi", editable = true }
